Change column width to avoid overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,7 +79,7 @@ nav a:hover {
     bottom: 10px;
     font-size: 35px;
     font-weight: 800;
-    color: rgb(238, 20, 20);
+    color: #fff;
     font-family: 'Playfair Display', sans-serif;
 }
 
@@ -187,6 +187,7 @@ nav a:hover {
 
 .about-text {
     text-align: center;
+    color: white;
 }
 
 /* Services Banner */
